# scribe

./: .env.example  .gitignore  CONTRIBUTING.md  MISSION.md  README.md  REPORT.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: index.html
scribe/: __init__.py  audio.py  cli.py  config.py  cuda_dlls.py  formats.py  jobs.py  server.py
scribe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scribe/engine/: diarizer.py  merge.py  transcriber.py
scribe/web/: app.js  index.html  style.css
scripts/: make_test_audio.ps1  setup.ps1
tests/: test_formats.py  test_merge.py
