[project]
name = "scribe"
version = "0.1.0"
description = "Self-hosted GPU transcription with speaker labels. An open-source Otter.ai alternative."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Jayakrishna Konda", email = "contact@jay739.dev" }]
requires-python = ">=3.11,<3.13"
dependencies = [
    "faster-whisper>=1.1.0",
    "pyannote.audio>=3.3.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
scribe = "scribe.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scribe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
